...
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            tools:ignore="MissingConstraints">


            <EditText
                android:id="@+id/Date"
                android:layout_width="291dp"
                android:layout_height="90dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="19dp"
...
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/hint"
                android:layout_width="173dp"
                android:layout_height="32dp"
                android:layout_above="@+id/btnSubmit1"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="172dp"
                android:layout_marginBottom="-43dp"
                android:text="Hint: 2020 January 15" />

            <Button
...
