...
            android:layout_marginStart="111dp"
            android:layout_marginEnd="140dp"
            android:text="copyright"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/date"
            android:layout_width="173dp"
            android:layout_height="40dp"
            android:layout_below="@+id/copyright"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="105dp"
...
